changing the comment section for spelling and grammar

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-	This website are for blog purposes by louieladiona
+	This website is for blog purposes by louieladiona
 -->
 <html>
 	<head>
